syntax = "proto3";

package com.hmproductions.bingo.datastreams;
option java_multiple_files = true;

import "models/RoomEvent.proto";

message RoomEventUpdate {
    models.RoomEvent room_event = 1;
}
