syntax = "proto3";

package com.hmproductions.bingo.models;
option java_multiple_files = true;

message GameEvent {

    enum EventCode {
        GAME_STARTED = 0;
        GAME_WON = 1;
        CELL_CLICKED = 2;
        PLAYER_QUIT = 3;
        INTERNAL_SERVER_ERROR = 4;
    }

    EventCode event_code = 1;
    uint32 winner = 2; // -1 is no one has won
    uint32 cell_clicked = 3;
    uint32 current_player_id = 4;
}