syntax = "proto3";

package com.hmproductions.bingo.models;
option java_multiple_files = true;

import "models/Player.proto";

message RoomEvent {

    enum EventCode {
        ROOM_DESTROY = 0;
        ADD_PLAYER = 1;
        REMOVE_PLAYER = 2;
        PLAYER_READY_CHANGED = 3;
        PLAYER_STATE_CHANGED = 4;
        GAME_START = 5;
    }

    EventCode event_code = 1;
    repeated models.Player players = 2;
    uint32 max_count = 3;
}